# authomatic

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  FUNDING.yml  LICENSE.txt  MANIFEST.in  README.rst  RELEASE.rst  asyncrequest.py  bootstrap.sh  bootstrap26.sh  build_docs.sh  changelog.html  config-template.py  development.html  experiment.py  genindex.html  index.html  main.py  objects.inv  pr_test  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements.txt  requirements2.txt  requirements3.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_venv.sh  test.py  test.sh  tox.ini
_modules/: abc.html  authomatic.html  index.html
_sources/: changelog.txt  development.rst.txt  development.txt  development.txt~562bfc53a2338d3eb598c603e5720b780acf32ee  index.txt  index.txt~562bfc53a2338d3eb598c603e5720b780acf32ee
_static/: config.rb  pygments.css
authomatic/: __init__.py  adapters.py  core.py  exceptions.py  settings.py  six.py  utils.py
authomatic_tests/: run_functional_tests.sh
bootstrap/: bootstrap.py  bootstrapsrc.py  makebootstrap.py
doc/: Makefile  make.bat
example/: app.yaml  handlers.py  main.py  routes.py
examples/: credentials.html  django-simple.html  flask-simple.html  index.html  providers.html  pyramid-simple.html  simple.html
javascript/: Cakefile  authomatic.coffee  authomatic.js  authomatic.map
news/: .git-keep  01.feature  01.misc  02.feature  03.bugfix  04.bugfix  05.bugfix  06.breaking  07.feature  08.bugfix  09.feature  1.doc  1.misc  10.bugfix  11.feature  12.feature  (+8 more)
(+324 files in other folders)
