[metadata]
version = 1.0.0a2
name = Authomatic
description = Authorization / authentication client library for Python web applications
long_description = file: README.rst
author = Peter Hudec
author_email = peterhudec@peterhudec.com
maintainer = Authomatic Project Community
maintainer_email = authomaticproject@protonmail.com
project_urls =
    Bug Tracker = https://github.com/authomatic/authomatic/issues
    Documentation = http://authomatic.github.io/authomatic
    Source Code = https://github.com/authomatic/authomatic/
license = MIT
license_file = LICENSE.txt
keywords =
    oauth2
    oauth
    openid
    access delegation
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: JavaScript
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[bdist_wheel]
universal = 1

[zest.releaser]
extra-message = [ci skip]
version-levels = 3
history-file = CHANGES.rst
release = no

